[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rockpaperscissors-bot"
version = "1.0.0"
description = "A dynamic Telegram bot for playing Rock Paper Scissors with engaging multiplayer interactions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "python-telegram-bot[job-queue]>=20.7",
    "apscheduler>=3.10.4",
    "pytz>=2023.3",
    "tzlocal>=5.0.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rockpaperscissors-bot = "main:app"

[tool.setuptools]
packages = ["find:"]

[tool.black]
line-length = 88
target-version = ["py37"]